[gd_scene load_steps=7 format=3 uid="uid://t3hqd341ct5"]

[ext_resource type="Script" path="res://scenes/ObstacleGenerator.gd" id="1_uctt8"]
[ext_resource type="PackedScene" uid="uid://dr0yfhmnym1ld" path="res://scenes/obstacles/basic_obstacle.tscn" id="2_dwxn3"]
[ext_resource type="PackedScene" uid="uid://dmlq4ggfgqm8t" path="res://scenes/obstacles/moving_obstacle.tscn" id="3_hguyv"]
[ext_resource type="PackedScene" uid="uid://b8esc713idmvi" path="res://scenes/obstacles/aiming_obstacle.tscn" id="4_x6myu"]
[ext_resource type="PackedScene" uid="uid://byqkcy3lapy3u" path="res://scenes/sniper.tscn" id="5_cbuiu"]

[sub_resource type="Curve2D" id="Curve2D_kly3e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 536, 0, 0, 0, 0, 0, 24, 0, 0, 0, 0, 0, 536)
}
point_count = 3

[node name="ObstacleGenerator" type="Node2D"]
script = ExtResource("1_uctt8")
progress_speed = 100.0
possible_obstacles = [ExtResource("2_dwxn3"), ExtResource("3_hguyv"), ExtResource("4_x6myu"), ExtResource("5_cbuiu")]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_kly3e")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(0, 536)
rotation = -1.5708

[node name="SniperCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="GenerationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="SniperCooldown" to="." method="_on_sniper_cooldown_timeout"]
[connection signal="timeout" from="GenerationTimer" to="." method="_on_generation_timer_timeout"]
